[gd_scene load_steps=4 format=2]

[ext_resource path="res://icon.png" type="Texture" id=1]
[ext_resource path="res://Player.gd" type="Script" id=2]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 31, 31 )

[node name="MC" type="KinematicBody2D" groups=["MC"]]
collision_mask = 4
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 0, -33 )
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, -33 )
shape = SubResource( 1 )

[node name="HoleRayCast" type="RayCast2D" parent="."]
position = Vector2( 24, -47 )
enabled = true
cast_to = Vector2( 0, 310 )
collision_mask = 4

[node name="WallRayCast" type="RayCast2D" parent="."]
position = Vector2( 20, -62.682 )
rotation = -1.5708
enabled = true
cast_to = Vector2( 0, 30 )
collision_mask = 4

[node name="EnemyRayCast" type="RayCast2D" parent="."]
position = Vector2( 31.782, -44.993 )
rotation = -1.5708
enabled = true
cast_to = Vector2( 0, 80 )
collision_mask = 2
